--- a/app/src/main/res/layout/detil_resep.xml
+++ b/app/src/main/res/layout/detil_resep.xml
@@ -21,10 +21,10 @@
 
     <ImageView
         android:id="@+id/foto_detil"
-        android:layout_width="376dp"
-        android:layout_height="300dp"
-        android:layout_margin="16dp"
-        android:layout_marginTop="200dp"
+        android:layout_width="370dp"
+        android:layout_height="200dp"
+        android:layout_margin="55dp"
+        android:layout_marginLeft="200dp"
         android:layout_weight="40"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_launcher_background" />
